# OpenDesk_Ai

./: .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.agent/: AI_CONTEXT.md  ARCHITECTURE.md  TECH_STACK_SUMMARY.md
.agent/agents/: backend-specialist.md  database-architect.md  debugger.md  devops-engineer.md  explorer-agent.md  frontend-specialist.md  go-specialist.md  orchestrator.md  performance-optimizer.md  project-planner.md  rust-specialist.md  security-auditor.md  test-engineer.md
.agent/rules/: GEMINI.md
.agent/scripts/: auto_preview.py  checklist.py  session_manager.py  verify_all.py
.agent/skills/database-design/: database-selection.md  orm-selection.md
.agent/skills/keyword-extraction/: SKILL.md
.agent/workflows/: brainstorm.md  create.md  debug.md  deploy.md  enhance.md  orchestrate.md  plan.md  preview.md  status.md  test.md  ui-ux-pro-max.md
.github/workflows/: build-desktop.yml  release-desktop.yml
backend/: .env.example  Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/agent/: llm.ts  loop.ts  prompts.ts
backend/src/api/: auth.ts  (+3 more)
caddy/: Caddyfile
desktop_client/: package-lock.json  package.json
desktop_client/src/: index.html
desktop_client/src-tauri/: Cargo.toml  LICENSE.txt  entitlements.plist  tauri.conf.json
desktop_client/src-tauri/capabilities/: default.json
desktop_client/src-tauri/src/: lib.rs  main.rs
frontend/: Dockerfile  next.config.ts
gateway/: Dockerfile  go.mod
(+28 files in other folders)
